test/classes/initializers/compilerGenerated/outOfOrderFieldUse.good
outOfOrderFieldUse.chpl:5: error: 'y' used before defined
outOfOrderFieldUse.chpl:6: note: defined here
outOfOrderFieldUse.chpl:5: error: field "y" used before it is initialized
